css/style.css
/* TITLE STUFF */

.titleName {
    text-align: center;
    font-family: "Times New Roman", Times, serif;
    color: black;
    font-weight: bold;

}

a {
    text-decoration: none;
    color: black;
}

a:hover {
    
    color: black;
    text-decoration: none;
}

.subtitle {
    text-align: center;
}

/* ABOUT */
.aboutMe {
    
}

/* CONTACT */
.btn {
    background-color: rgb(43, 42, 42);
    border-style: none;

}

.btn:hover {
    background-color: rgb(150, 150, 150);
    border-style: none;
}

.btn:active {
    background-color: rgb(255, 0, 0);
    border-style: none;
}


/* PORTFOLIO */

.pics3 {
    display: none;
}


@media screen and (max-width:768px) {

.slidePics {

    display: none;
}

.pics3 {
    display: block;
}

}

